hphp/test/zend/bad/ext/mysqli/tests/mysqli_change_user_oo.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifemb.inc');
require_once('skipifconnectfailure.inc');

require_once('table.inc');
if (!$IS_MYSQLND && (mysqli_get_server_version($link) < 50118 && mysqli_get_server_version($link) > 50100)) {
	die("skip Your MySQL Server version has a known bug that will cause a crash");
}
?>